Correction: z-index trop faible

--- a/src/components/SideMenu/style.scss
+++ b/src/components/SideMenu/style.scss
@@ -9,6 +9,7 @@
         padding: 1em;
         box-shadow: 0 0 10px rgba(0, 0, 0, .2);
         width: 300px;
+        z-index: 1001;
 
         &-title {
             font-size: 1.3em;
